# HexapodSim

./: CMakeLists.txt  Controller.cpp  Controller.h  Gait.cpp  Gait.h  README.md  Robot.h  joytest.py  main.cpp  move.py  run.sh
Controller/: CMakeLists.txt  Controller.cpp  Controller.h  Gait.cpp  Gait.h  HexapodController.cpp  HexapodController.h  Robot.h  ServoTest.cpp  ServoTest.h  Standup.cpp  Standup.h  calculator.c  calculator.h  controller.c  controller.h  controller_config.h  controller_math.h  controller_types.h  log.h  main.cpp  motion.h  robot.h  robot_config.h
HexSpider/: blub.py  config.py  ik.py  location.py  matrix.py  move.py  run.sh  sim.gzlaunch
HexSpider/models/hexspider/: hexspider.sdf  model.config
HexSpider/models/hexspider/meshes/: 2XL-430_v4.stl  Chassis_v37.stl  Femur_v41.stl  XL-430_new_v2.stl
HexSpider/plugins/Controller/: CMakeLists.txt
HexSpider/plugins/Controller/include/: HexspiderControllerPlugin.hh
HexSpider/world/: hexspider_world.sdf
models/hexspider/: hexspider.sdf
models/hexspider/meshes/: Coxa_v37.stl  hexspider_body.stl
plugins/Controller/src/: HexspiderControllerPlugin.cc
world/: hexspider_world.sdf
